# telegram-members-adder

./: .gitignore  BUILD_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  FILE_STRUCTURE.txt  QUICKSTART.md  README_WEB.md  START_HERE.md  package.json  tailwind.config.js  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/add-members/: route.ts
backend/: main.py  pyproject.toml  requirements.txt  telegram_service.py
components/: ConfigForm.tsx  FileUploader.tsx  ResultsDisplay.tsx
frontend/: package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/add-members/: route.ts
frontend/components/: ConfigForm.tsx  ResultsDisplay.tsx
